tests/dataset/tpc-ds/compiler/erlang/q3.error
run: exit status 127
escript: exception error: bad key: ss_ext_sales_price
  in function  map_get/2
     called as map_get(ss_ext_sales_price,
                       #{i =>
                             #{i_item_sk => 1,i_manufact_id => 100,
                               i_brand_id => 1,i_brand => "Brand1"},
                         dt => #{d_date_sk => 1,d_year => 1998,d_moy => 12},
                         ss =>
                             #{ss_sold_date_sk => 1,ss_item_sk => 1,
                               ss_ext_sales_price => 10}})
     *** argument 1: not present in map
  in call from q3_erl__escript__1752__555493__382812__8965:'-main/1-lc$^6/1-2-'/1 (/tmp/q3.erl, line 9)
  in call from q3_erl__escript__1752__555493__382812__8965:'-main/1-lc$^4/1-1-'/1 (/tmp/q3.erl, line 9)
  in call from q3_erl__escript__1752__555493__382812__8965:main/1 (/tmp/q3.erl, line 9)
  in call from escript:run/2 (escript.erl, line 904)
  in call from escript:start/1 (escript.erl, line 418)
  in call from init:start_it/1 
  in call from init:start_em/1 
